python-sqlfuse (0.5.9-1) unstable; urgency=low

  * Concurrency problem

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 09 Apr 2011 20:42:54 +0200

python-sqlfuse (0.5.8-1) unstable; urgency=low

  * Deadlock; remove debugging code
  * Fix renaming of directories

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 09 Apr 2011 09:08:02 +0200

python-sqlfuse (0.5.7-1) unstable; urgency=low

  * Reordered a couple of background DB accesses
    to prevent long-term connections, i.e. deadlock.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 17:54:08 +0200

python-sqlfuse (0.5.6-1) unstable; urgency=low

  * incoming chmod() didn't preserve the inode type.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 16:48:02 +0200

python-sqlfuse (0.5.5-1) unstable; urgency=low

  * Cleanup log processing.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 11:26:29 +0200

python-sqlfuse (0.5.4-1) unstable; urgency=low

  * Fix inode deletion; non-file inodes didn't get killed

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 10:19:40 +0200

python-sqlfuse (0.5.3-1) unstable; urgency=low

  * Count directory links.
  * Fix passing the inode and mode to readdir. Arguments were backwards. Ouch.
  * Fix passing the inode and mode to readdir. Type argument is not a mode. Ouch.
  * Retry creating files so /bin/cp is happy

 -- Matthias Urlichs <smurf@deee.intern.smurf.noris.de>  Wed, 06 Apr 2011 23:37:27 +0200

python-sqlfuse (0.5.2-1) unstable; urgency=low

  * Monkeypatch twisted.python.failure.Failure.throwExceptionIntoGenerator

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 18:50:07 +0200

python-sqlfuse (0.5.1-4) unstable; urgency=low

  * Depend on python-passfd

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 17:22:23 +0200

python-sqlfuse (0.5.1-3) unstable; urgency=low

  * depend on python-argparse.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 17:04:47 +0200
